--- a/static/css/about.css
+++ b/static/css/about.css
@@ -8,3 +8,18 @@ body {
   align-content: center;
   margin-top: 10vh;
 }
+
+.profile {
+  width: 90rem;
+  border-radius: 20%;
+  display: inline-block;
+  padding: 2rem;
+  margin-bottom: 2rem;
+  background-color: rgba(255, 211, 16, 0.89);
+  border: 2px solid rgb(255, 255, 255, 0.5);
+}
+
+.profile img {
+  width: 90rem;
+  border-radius: 18%;
+}
