--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename = 'css/main.css') }}"
     />
@@ -19,25 +25,66 @@
   </head>
 
   <body>
-    <div id="header" role="menu">
-      <nav class="menu">
-        <ul>
-          <li>
-            <a href="/home"><b>Home</b></a>
-          </li>
-          <li>
-            <a href="/about"><b>About</b></a>
-          </li>
-          <li>
-            <a href="/service"><b>Service</b></a>
-          </li>
-          <li>
-            <a href="/contact"><b>Contact</b></a>
-          </li>
-          <li>
-            <a href="/goods"><b>Goods</b></a>
-          </li>
-        </ul>
+    <div class="menu" id="header" role="menu">
+      <nav class="menu navbar navbar-expand-lg navbar-dark nav-distance">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/home"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/service">Service</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/goods">Goods</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="/languages"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Languages
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <select name="lng">
+                    <option type="text" , value="en">한국어</option>
+                    <option type="text" , value="en">English</option>
+                    <option type="text" , value="ja">日本語</option>
+                    <option type="text" , value="es">español</option>
+                    <option type="text" , value="fr">français</option>
+                    <option type="text" , value="id">bahasa Indonesia</option>
+                    <option type="text" , value="zh-CN">简体中文</option>
+                    <option type="text" , value="zh-TW">繁體中文</option>
+                  </select>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </div>
 
@@ -46,16 +93,25 @@
         <div class="two">
           <span class="profile"
             ><img
-              src="{{ url_for('static', filename = 'img/img_5.jpg') }}"
+              src="{{ url_for('static', filename = 'img/about_limnpet.jpg') }}"
               alt="cannot load a image"
           /></span>
-          <h3><strong>Hello! We are LimnPet</strong></h3>
-          <h4>
+          <p style="font-size: 60px; font-weight: 400; color: aliceblue">
+            Hello, We are LimnPet! 🐶
+          </p>
+          <p
+            style="
+              font-size: 20px;
+              font-style: italic;
+              font-weight: 200;
+              color: aliceblue;
+            "
+          >
             LimnPet is a styling service that makes your pet photos into various
-            painting styles!
-          </h4>
+            painting styles
+          </p>
 
-          <div class="'intext">
+          <div class="intext" style="font-size: 30px; color: aliceblue">
             You no longer have to pay for the styling of your pet photos.<br />
             Through LimnPet, We have simplified the complicated process for
             purchasing pet custom goods.<br />
@@ -65,16 +121,35 @@
             Goods from the menu.
           </div>
 
-          <h4>Future Plans</h4>
-          <div class="'intext">
-            LimnPet's exclusive goods edition via collaboration with artist,
-            goods brand<br />
-            Considering to add photo manipulation Options<br />
-            Stylized pet photos into your own emoji<br />
-            Stylized pet photos into NFT<br />
+          <p style="font-size: 45px; font-weight: 400; color: aliceblue">
+            <br />Future Plans
+          </p>
+
+          <div
+            class="'intext"
+            style="font-size: 25px; font-weight: 200; color: aliceblue"
+          >
+            <br />LimnPet's exclusive goods edition via
+            <span style="color: rgb(255, 251, 13)"
+              >collaboration with artist, goods brand</span
+            >
+            <br />
+            Considering to add
+            <span style="color: rgb(255, 251, 13)"
+              >photo manipulation Options</span
+            ><br />
+            Stylized pet photos into your own
+            <span style="color: rgb(255, 251, 13)">emoji</span><br />
+            Stylized pet photos into
+            <span style="color: rgb(255, 251, 13)">NFT</span><br />
           </div>
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
