--- a/templates/goods.html
+++ b/templates/goods.html
@@ -5,6 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Goods</title>
+        <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
         <link rel="stylesheet" href="./static/Goods_files/main.css">
         <link rel="stylesheet" href="./static/Goods_files/goods.css">
         <style>
@@ -121,17 +127,68 @@
     </head>
 
     <body>
-        <div id="header" role="menu">
-            <nav class="menu">
-                <ul>
-                    <li><a href="https://www.limnpet.ml/home"><b>Home</b></a></li>
-                    <li><a href="https://www.limnpet.ml/about"><b>About</b></a></li>
-                    <li><a href="https://www.limnpet.ml/service"><b>Service</b></a></li>
-                    <li><a href="https://www.limnpet.ml/contact"><b>Contact</b></a></li>
-                    <li><a href="https://www.limnpet.ml/goods"><b>Goods</b></a></li>
-                </ul>
+        <div class="menu" id="header" role="menu">
+            <nav class="menu navbar navbar-expand-lg navbar-dark nav-distance">
+              <div class="container-fluid">
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/home"
+                        >Home</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/service">Service</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/goods">Goods</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a
+                        class="nav-link dropdown-toggle"
+                        href="/languages"
+                        id="navbarDropdown"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                      >
+                        Languages
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <select name="lng">
+                          <option type="text" , value="en">한국어</option>
+                          <option type="text" , value="en">English</option>
+                          <option type="text" , value="ja">日本語</option>
+                          <option type="text" , value="es">español</option>
+                          <option type="text" , value="fr">français</option>
+                          <option type="text" , value="id">bahasa Indonesia</option>
+                          <option type="text" , value="zh-CN">简体中文</option>
+                          <option type="text" , value="zh-TW">繁體中文</option>
+                        </select>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </nav>
-        </div>
+          </div>
         
         <div id="container" role="main">
 
@@ -180,19 +237,20 @@
                 </div>
             </div>
         </div>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js">
-    let test = document.getElementById("example");
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js">
+        let test = document.getElementById("example");
 
-    test.addEventListener("mouseover", function (event) {
-    //highlight the mouseover target
-    event.target.style.color = "red";
-    }, false);
+        test.addEventListener("mouseover", function (event) {
+        //highlight the mouseover target
+        event.target.style.color = "red";
+        }, false);
 
-    test.addEventListener("mouseout", function (event) {
-    // highlight the mouseout target
-    event.target.style.color = "black";
-    }, false);
-</script>
+        test.addEventListener("mouseout", function (event) {
+        // highlight the mouseout target
+        event.target.style.color = "black";
+        }, false);
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!-- <a href="https://url.kr/kpbz96" class="ct">1</a>
 <a href="https://www.idus.com/" class="ct">아이디어스</a>
 <a href="https://url.kr/koxdmp" class="ct">마플</a> --></div></body></html>
