--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LimnPet 🐶</title>
     <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename = 'css/main.css') }}"
     />
@@ -32,9 +48,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
+      href="{{ url_for('static', filename = 'css/contact.css') }}"
     />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
@@ -53,43 +67,89 @@
             <div class="slide"></div>
             <div class="slide"></div>
             <div class="overlay">
-              <h1>Drawing your pet, <b>LimnPet</b></h1>
+              <h1>Drawing your pet, LimnPet</h1>
+              <div id="service_button">
+                <button
+                  class="remove-image"
+                  type="button"
+                  onClick="location.href='/service'"
+                >
+                  <span class="image-title"
+                    >림펫서비스로 이동. 아래로 옮기기</span
+                  >
+                </button>
+              </div>
             </div>
           </section>
         </main>
       </div>
     </div>
     <div id="container" role="main">
-      <div id="header" role="menu">
-        <nav class="menu">
-          <ul>
-            <li>
-              <a href="/home"><b>Home</b></a>
-            </li>
-            <li>
-              <a href="/about"><b>About</b></a>
-            </li>
-            <li>
-              <a href="/service"><b>Service</b></a>
-            </li>
-            <li>
-              <a href="/contact"><b>Contact</b></a>
-            </li>
-            <li>
-              <a href="/goods"><b>Goods</b></a>
-            </li>
-          </ul>
+      <div class="menu" id="header" role="menu">
+        <nav class="menu navbar navbar-expand-lg navbar-dark nav-distance">
+          <div class="container-fluid">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/home"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/about">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/service">Service</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/contact">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/goods">Goods</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="/languages"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Languages
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <select name="lng">
+                      <option type="text" , value="en">한국어</option>
+                      <option type="text" , value="en">English</option>
+                      <option type="text" , value="ja">日本語</option>
+                      <option type="text" , value="es">español</option>
+                      <option type="text" , value="fr">français</option>
+                      <option type="text" , value="id">bahasa Indonesia</option>
+                      <option type="text" , value="zh-CN">简体中文</option>
+                      <option type="text" , value="zh-TW">繁體中文</option>
+                    </select>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
       </div>
 
       <div class="list">
         <div class="two">
-          <!-- <span class="profile"
-            ><img
-              src="{{ url_for('static', filename = 'img/img_5.jpg') }}"
-              alt="cannot load a image"
-          /></span> -->
-          <!-- 3D Slideshow Section -->
           <section id="slideshow">
             <div class="entire-content">
               <div class="content-carrousel">
@@ -121,31 +181,26 @@
                     src="http://itimg.chosun.com/sitedata/image/201910/26/2019102600772_0.jpg"
                   />
                 </figure>
-                <figure class="shadow">
-                  <img
-                    src="https://t1.daumcdn.net/news/202105/24/potenshop/20210524160959298pcwt.jpg"
-                  />
-                </figure>
-                <!-- <figure class="shadow">
-                  <img
-                    src="https://images.pexels.com/photos/301682/pexels-photo-301682.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
-                  />
-                </figure>
-                <figure class="shadow">
-                  <img
-                    src="https://images.pexels.com/photos/933054/pexels-photo-933054.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"
-                  />
-                </figure> -->
               </div>
             </div>
           </section>
-          <h3><strong>Hello! We are LimnPet</strong></h3>
-          <h4>
-            LimnPet is a styling service that makes your pet photos into various
-            painting styles!
-          </h4>
 
-          <div class="intext">
+          <p style="font-size: 60px; font-weight: 400; color: aliceblue">
+            Hello, We are LimnPet! 🐶
+          </p>
+          <p
+            style="
+              font-size: 18px;
+              font-style: italic;
+              font-weight: 200;
+              color: aliceblue;
+            "
+          >
+            LimnPet is a styling service that makes your pet photos into various
+            painting styles
+          </p>
+
+          <div class="intext" style="font-size: 22px; color: aliceblue">
             You no longer have to pay for the styling of your pet photos.<br />
             Through LimnPet, We have simplified the complicated process for
             purchasing pet custom goods.<br />
@@ -155,32 +210,88 @@
             Goods from the menu.
           </div>
 
-          <h4>Future Plans</h4>
-          <div class="'intext">
-            LimnPet's exclusive goods edition via collaboration with artist,
-            goods brand<br />
-            Considering to add photo manipulation Options<br />
-            Stylized pet photos into your own emoji<br />
-            Stylized pet photos into NFT<br />
+          <p style="font-size: 45px; font-weight: 400; color: aliceblue">
+            <br />Future Plans
+          </p>
+
+          <div
+            class="'intext"
+            style="font-size: 25px; font-weight: 200; color: aliceblue"
+          >
+            <br />LimnPet's exclusive goods edition via
+            <span style="color: #f2e205; font-weight: 600"
+              >collaboration with artist, goods brand</span
+            >
+            <br />
+            Considering to add
+            <span style="color: #f2e205; font-weight: 600"
+              >photo manipulation Options</span
+            ><br />
+            Stylized pet photos into your own
+            <span style="color: #f2e205; font-weight: 600">emoji</span><br />
+            Stylized pet photos into
+            <span style="color: #f2e205; font-weight: 600">NFT</span><br />
           </div>
         </div>
       </div>
 
       <div class="list">
         <div class="three">
-          <h1>서비스 예시 이미지 및 설명 첨부 예정</h1>
+          <!-- <div class="iframebox" position="'relative" width="60% !important">
+            <iframe position="'absolute" frameborder="0" class="juxtapose" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=6093a3be-c451-11ec-b5bb-6595d9b17862"></iframe>
+          </div> -->
+          <p style="font-size: 24px; font-weight: 600; color: aliceblue">
+            Service Before & After
+          </p>
+          <div class="beforeafter">
+            <iframe
+              style="width: 100%; height: 100%"
+              frameborder="0"
+              class="juxtapose"
+              src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=6093a3be-c451-11ec-b5bb-6595d9b17862"
+            ></iframe>
+          </div>
+          <p style="margin: 0 auto; font-size: 20px; color: aliceblue">
+            바를 움직여 보세요
+          </p>
         </div>
       </div>
 
       <div class="list">
         <div class="four">
-          <img
-            class="contact_img"
-            src="{{ url_for('static', filename = 'img/bg.jpg') }}"
-          />
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>김한주</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>김민지</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>성연재</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>송종호</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>정영훈</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
           <div>
             <a href="https://www.limnpet.ml" class="ct">Home</a>
-            <a href="mailto:allislijell@gmail.com" class="ct">Gmail</a>
+            <a href="" class="ct">Notion</a>
             <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
           </div>
         </div>
@@ -230,26 +341,6 @@
         </div>
       </div>
     </div>
-    <!-- <script>
-      var index = 0; 
-      window.onload = function () {
-        slideShow();
-      };
-
-      function slideShow() {
-        var i;
-        var x = document.getElementsByClassName("slide1");
-        for (i = 0; i < x.length; i++) {
-          x[i].style.display = "none"; 
-        }
-        index++;
-        if (index > x.length) {
-          index = 1; 
-        }
-        x[index - 1].style.display = "block";
-        setTimeout(slideShow, 2000); 
-        }
-    </script> -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -261,8 +352,8 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
   </body>
